# annoter

./: .gitignore  CLAUDE.md  PLAN.md  PROMPT_RESTART.md  build.py  pyproject.toml  requirements.txt
resources/themes/: dark.qss  light.qss
src/annoter/: __init__.py  __main__.py  app.py  config.py
src/annoter/controllers/: __init__.py  align.py  commands.py  geometry.py  tools.py
src/annoter/model/: __init__.py  document.py  gdt.py  styles.py
src/annoter/services/: __init__.py  pdf_export.py  pdf_render.py  recent_files.py  theme.py
src/annoter/views/: __init__.py  annotation_list.py  gdt_dialog.py  gdt_editor.py  gdt_palette.py  icons.py  main_window.py  measurement_hud.py  note_editor.py  pdf_scene.py  pdf_view.py  properties_dock.py  selection_toolbar.py  tool_palette.py
src/annoter/views/items/: __init__.py  base.py  callout.py  freehand.py  gdt.py  gdt_symbols.py  lines.py  note.py  poly.py  shapes.py  stamp.py  text.py
tests/: conftest.py  test_align.py  test_callout.py  test_commands.py  test_endpoint_snap.py  test_fill_opacity.py  test_format_painter.py  test_gdt.py  test_gdt_editor.py  test_geometry_panel.py  test_grouping.py  test_handles.py  test_live_properties.py  test_main_window_wiring.py  test_measurement_hud.py  test_move_modifiers.py  test_persistence.py  test_poly.py  test_recent_files.py  test_render.py  test_resize_constrain.py  test_selection.py  test_smart_guides.py  test_smoke.py  test_stamp.py  test_theme.py  test_tools.py
